# CloseClaw

./: .dockerignore  .env.example  .gitignore  AGENT_PROMPT_CONSTRUCTION_REPORT.md  CloseClaw_Restruction.md  Dockerfile  GUIDE.md  GUIDE_zh.md  MEMORY_FLUSH_BUG_PLAN.md  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3.5_COMPLETION.md  PHASE3_SUMMARY.md  PHASE4_STEP1_COMPLETION.md  PHASE4_STEP2_COMPLETION.md  PHASE4_STEP3_COMPLETION.md  PHASE5_SUMMARY.md  Phase4_Memory_Upgrade_Plan.md  Phase4_Step3_Detailed_Plan.md  Phase5_Complex_Task_Upgrade_Plan.md  Phase6_Heartbeat_Upgrade_Plan.md  Planning.md  README.md  README_zh.md  TOKEN_USAGE_DISPLAY.md  VERIFICATION_COMPLETE_WORKFLOW.md  closeclaw_intro.txt  config.example.yaml  docker-compose.yml  pyproject.toml  pytest.ini  run_tests.bat  run_tests.py  run_tests.sh  verify_phase1.py
closeclaw/: __init__.py  __main__.py  config.py  runner.py
docs/: Docker_Runbook.md  PHASE2_INTEGRATION_DEMO.py  PHASE2_PROGRESS.md  WhatsApp_Bridge_Protocol.md  phase5_action_schema.md  phase5_orchestrator_spec.md  phase5_rollout_and_rollback.md  phase5_subtask_interface.md
tests/: __init__.py  conftest.py  test_agent_core.py  test_agent_main_loop.py  test_audio_transcription.py  test_auth_service.py  test_channels.py  test_cli_commands.py  test_compression_history_bugfix.py  test_config.py  test_context_interface_cleanup.py  test_context_management.py  test_context_service.py  test_cron_service.py  test_docker.sh  test_flush_workflow_fix.py  test_guardian.py  test_heartbeat_cron_integration.py  test_heartbeat_service.py  test_integration.py  test_litellm_provider.py  test_main_entrypoint_dispatch.py  test_mcp_bridge.py  test_mcp_cli_status.py  test_mcp_client_pool_resilience.py  test_mcp_transport_http.py  test_mcp_transport_stdio.py  test_memory_flush.py  test_memory_manager.py  test_memory_retrieval_integration.py  test_middleware.py  test_multi_task_workflows.py  test_need_auth_model.py  test_ollama_provider.py  test_openai_compatible_provider.py  (+24 more)
(+112 files in other folders)
