[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "closeclaw"
version = "0.1.0"
description = "A lightweight and safe Python Agent framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CloseClaw Team", email = "team@closeclaw.dev"}
]
keywords = ["agent", "llm", "automation", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
telegram = [
    "python-telegram-bot>=20.0",
]
feishu = [
    "feishu-sdk>=1.0.0",
]
fastapi = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.urls]
Home = "https://github.com/closeclaw/closeclaw"
Documentation = "https://closeclaw.readthedocs.io"
Repository = "https://github.com/closeclaw/closeclaw.git"
Issues = "https://github.com/closeclaw/closeclaw/issues"

[tool.flit.module]
name = "closeclaw"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T10", "SIM"]
ignore = ["E501"]  # Black handles line length

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
